@@ -8,6 +8,10 @@ First release: "Thru These Architecht's Eyes", Nangband 0.1.0
 - Changed version number to 0.1.0.  --takk
 - Updated the savefile code so it uses the same version as in Nangband-dev1.
   --takk
+- Allow the minumum and maximum group sizes for monsters to be defined in the
+  lib/edit/ files.  Add documentation about how group sizes are calculated for
+  non-programmers.  --takk
+- Clean up src/defines.h by using cleaner flag definitions.  --takk
 
 21/12/02
 --------
